Fix header visibility on mobile

--- a/src/app/shared/header/header.component.sass
+++ b/src/app/shared/header/header.component.sass
@@ -7,3 +7,4 @@
     background-color: $red
     display: inline-block
     padding: 10px
+    margin-top: $navbar-height
